--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,16 @@
     <repositories>
 
     </repositories>
+         
     <pluginRepositories>
-
+        <pluginRepository>	
+            <id>spring-snapshots</id>	
+            <url>http://repo.spring.io/snapshot</url>	
+        </pluginRepository>	
+        <pluginRepository>	
+            <id>spring-milestones</id>	
+            <url>http://repo.spring.io/milestone</url>	
+        </pluginRepository>	
     </pluginRepositories>
 
     <dependencies>
